[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PSPhasor"
version = "0.2.0"
description = "Create clean phasor diagrams for electrical engineering workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ahmed M. Elkholy", email = "ahm_elkholy@outlook.com" },
]
keywords = [
    "phasor",
    "electrical-engineering",
    "matplotlib",
    "visualization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/ahmelkholy/PSPhasor"
Issues = "https://github.com/ahmelkholy/PSPhasor/issues"

[tool.setuptools.packages.find]
include = ["PSPhasor*"]

[tool.setuptools.package-data]
PSPhasor = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
